Fixed zoom on iphone (maybe)

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -34,6 +34,7 @@
 
 html,
 body {
+    touch-action: pan-x pan-y;
     width: 100%;
     overflow-x: hidden;
     margin: 0;
